--- a/_sass/bootstrap/_mixins.scss
+++ b/_sass/bootstrap/_mixins.scss
@@ -3,7 +3,7 @@
 // Used in conjunction with global variables to enable certain theme features.
 
 // Vendor
-@import "/Users/shouldgo/Documents/GitHub/shouldgo.github.io/_sass/bootstrap/vendor/rfs";
+@import "/_sass/bootstrap/vendor/rfs";
 
 // Deprecate
 @import "mixins/deprecate";
