--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,7 @@ layout: default
       {%- for post in site.posts -%}
       <li class="post-card">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        <img src="/assets/images/2017/08/DSCF0410-1.jpg">
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
