--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,17 +10,15 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
       <li class="post-card">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <img src="/assets/images/2017/08/DSCF0410-1.jpg">
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
-          </a>
+        <img class="post-image" src="/assets/images/2017/08/DSCF0410-1.jpg">
+        <h3 class="post-title">
+          <a href="{{ post.url | relative_url }}" class="post-link">{{ post.title | escape }}</a>
         </h3>
+        <p class="post-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <span class="post-meta">{{ post.date | date: date_format }}</span>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
