--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,31 +24,67 @@
   }
   
   body {
-    background: #fefefe;
+    background: #f7f6f4;
     font-family: 'Georgia', serif;
     font-style: normal;
+    line-height: 28px;
     font-weight: 400;
+    font-size: 16px;
     box-sizing: border-box;
+    padding: 0 40px 0 40px;
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Tahoma", sans-serif;
+    font-family: "Verdana", sans-serif;
     font-style: normal;
     font-weight: 500;
   }
 
-  .post-list {
+  .wrapper {
+    margin: 0 auto 0 auto;
+    max-width: 960px;
+  }
+
+  .site-nav, .post-list, .post-card {
     display: flex;
+  }
+
+  .site-nav {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+  }
+
+  .post-list {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 0 auto 0 auto;
-    max-width: 920px;
+    row-gap: 80px;
+    column-gap: 40px;
   }
 
   .post-card {
-    display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 300px;
+    gap: 8px;
+    max-width: 460px;
+  }
+
+  .post-image {
+    border-radius: 4px;
+    border: 1px solid #2d2d2d20;
+  }
+
+  .post-title {
+    font-size: 20px;
+  }
+
+  .post-meta {
+    font-family: "Tahoma", sans-serif;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .post-description {
+    color: #2d2d2d80;
   }
