--- a/assets/main.scss
+++ b/assets/main.scss
@@ -88,3 +88,31 @@
   .post-description {
     color: #2d2d2d80;
   }
+
+  .post-content img {
+    width: 100%;
+  }
+
+  .post-content p {
+    max-width: 800px;
+  }
+
+  .post-content ul:has(li img) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    list-style: none;
+  }
+
+  .post-content ul:has(li img) > li {
+    height: 400px;
+    position: relative;
+  }
+
+  .post-content ul:has(li img) li img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    border-radius: 5px;
+  }
