fonts added, CSS/HTML updated, ruby & jekyll updated

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,20 +24,31 @@
   }
   
   body {
-    background: #f7f6f4;
-    font-family: 'Georgia', serif;
+    background: #FAFAFA;
+    color: #2D2D2D;
+    font-family: 'Noto Serif', serif;
     font-style: normal;
-    line-height: 28px;
-    font-weight: 400;
     font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
     box-sizing: border-box;
     padding: 0 40px 0 40px;
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Verdana", sans-serif;
-    font-style: normal;
+    font-family: "Noto Serif", serif;
+    font-style: bold;
     font-weight: 500;
+  }
+
+  h1 {
+    font-size: 64px;
+    line-height: 72px;
+  }
+
+  h3 {
+    font-size: 32px;
+    line-height: 40px;
   }
 
   .wrapper {
@@ -75,20 +86,6 @@
     border: 1px solid #2d2d2d20;
   }
 
-  .post-title {
-    font-size: 20px;
-  }
-
-  .post-meta {
-    font-family: "Tahoma", sans-serif;
-    font-size: 12px;
-    line-height: 16px;
-  }
-
-  .post-description {
-    color: #2d2d2d80;
-  }
-
   .post-content img {
     max-width: 100%;
   }
@@ -115,4 +112,9 @@
     height: 100%;
     vertical-align: middle;
     border-radius: 5px;
+  }
+
+  .post-description {
+    font-family: 'Noto Sans', sans-serif;
+    line-height: 28px;
   }
