--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,18 +1,15 @@
 ---
 ---
-* {
+
+/* General */
+
+  * {
     margin: 0;
     padding: 0;
   }
   
   *, *::after, *::before {
     box-sizing: border-box;
-  }
-  
-  a {
-    text-decoration: none;
-    /*overflow-x: hidden;*/
-    color: #2d2d2d;
   }
   
   html {
@@ -26,7 +23,7 @@
   body {
     background: #FAFAFA;
     color: #2D2D2D;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Serif', 'Times New Roman', Georgia, serif;
     font-style: normal;
     font-size: 16px;
     line-height: 24px;
@@ -35,10 +32,11 @@
     padding: 0 40px 0 40px;
   }
 
+/* Fonts */
+
   h1, h2, h3, h4, h5, h6 {
-    font-family: "Noto Serif", serif;
-    font-style: bold;
-    font-weight: 500;
+    font-style: semibold;
+    font-weight: 600;
   }
 
   h1 {
@@ -47,24 +45,41 @@
   }
 
   h3 {
-    font-size: 32px;
-    line-height: 40px;
+    font-size: 24px;
+    line-height: 32px;
   }
+
+  a {
+    text-decoration: none;
+    color: #2d2d2d;
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+
+/* Layouts */
 
   .wrapper {
     margin: 0 auto 0 auto;
     max-width: 960px;
   }
 
-  .site-nav, .post-list, .post-card {
-    display: flex;
-  }
-
   .site-nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 80px;
+    padding: 40px 12px 40px 12px;
+  }
+
+  .site-title {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 34px;
+  }
+
+  .flex {
+    display: flex;
   }
 
   .post-list {
@@ -75,16 +90,79 @@
     column-gap: 40px;
   }
 
+/* Post cards */
+
   .post-card {
+    position: relative;
     flex-direction: column;
-    gap: 8px;
+    align-items: stretch;
+    gap: 20px;
     max-width: 460px;
+    max-height: 460px;
+    height: 460px;
+  }
+
+  .post-card:first-child {
+    flex-direction: row;
+    gap: 32px;
+    width: 100%;
+    max-width: 100%;
+    max-height: 400px;
+  }
+
+  .post-card:first-child .post-info {
+    gap: 20px;
+    padding: 12px 0px 12px 0px;
+    max-width: 328px;
   }
 
   .post-image {
+    flex: 1 1 auto;
     border-radius: 4px;
-    border: 1px solid #2d2d2d20;
+    box-shadow: 0px 0px 0px 1px #2D2D2D20 inset;
+    background-image: url("/assets/images/2017/08/DSCF0410-1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
   }
+
+  .post-info {
+    padding: 0px 12px 0px 12px;
+    flex-direction: column;
+    gap: 12px;
+  }
+
+  .post-title a::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+  }
+
+  .post-description {
+    color: #2D2D2D90;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .post-card:first-child .post-description {
+    -webkit-line-clamp: 8;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .text-s {
+    font-family: 'Noto Sans', sans-serif;
+    line-height: 28px;
+  }
+
+/* Articles */
 
   .post-content img {
     max-width: 100%;
@@ -95,7 +173,6 @@
   }
 
   .post-content ul:has(li img) {
-    display: flex;
     flex-wrap: wrap;
     gap: 20px;
     list-style: none;
@@ -112,9 +189,4 @@
     height: 100%;
     vertical-align: middle;
     border-radius: 5px;
-  }
-
-  .post-description {
-    font-family: 'Noto Sans', sans-serif;
-    line-height: 28px;
   }
