--- a/assets/main.scss
+++ b/assets/main.scss
@@ -164,29 +164,69 @@
 
 /* Articles */
 
+  .post-header {
+    margin-bottom: 48px;
+  }
+  
+  /* Image Caption Support */
+  .image-caption {
+    text-align: center;
+    font-size: 16px;
+    color: #666;
+    margin-top: -24px;
+    margin-bottom: 32px;
+    font-style: italic;
+  }
+
+  .post-content {
+    font-size: 20px;
+    line-height: 32px;
+  }
+
   .post-content img {
     max-width: 100%;
+    max-height: 90vh;
+    height: auto;
+    margin: 36px auto;
+    display: block;
+    border-radius: 4px;
   }
 
   .post-content p {
     max-width: 800px;
+    margin-bottom: 24px;
+  }
+  
+  .post-content h1, .post-content h2, .post-content h3, 
+  .post-content h4, .post-content h5, .post-content h6 {
+    margin-top: 40px;
+    margin-bottom: 16px;
+  }
+  
+  .post-content ul, .post-content ol {
+    margin-bottom: 24px;
+    padding-left: 24px;
+  }
+  
+  .post-content li {
+    margin-bottom: 8px;
   }
 
   .post-content ul:has(li img) {
-    flex-wrap: wrap;
-    gap: 20px;
     list-style: none;
+    margin: 40px 0;
+    padding-left: 0;
   }
 
   .post-content ul:has(li img) > li {
-    height: 400px;
-    position: relative;
+    margin-bottom: 24px;
   }
 
   .post-content ul:has(li img) li img {
-    object-fit: cover;
-    /*width: 100%;*/
-    height: 100%;
+    max-width: 100%;
+    max-height: 90vh;
+    height: auto;
     vertical-align: middle;
-    border-radius: 5px;
+    border-radius: 4px;
+    margin: 0;
   }
