--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,17 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
+<footer class="site-footer">
   <div class="wrapper">
-    <ul>
-      <li>
-        <p>Блог Димы Афонина</p>
-      </li>
-    </ul>
+    <div class="footer-content">
+      <div class="footer-left">
+        <a class="footer-logo" href="{{ "/" | relative_url }}">shouldgo.me</a>
+        <div class="footer-links">
+          <a class="text-s footer-link" href="https://facebook.com/shouldgo">фейсбук</a>
+          <a class="text-s footer-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
+          <a class="text-s footer-link" href="{{ '/about' | relative_url }}">эбаут</a>
+        </div>
+      </div>
+      <div class="footer-right">
+        <span class="copyright">Dima Afonin © 2009 - 2025</span>
+      </div>
+    </div>
   </div>
-
 </footer>
