--- a/assets/main.scss
+++ b/assets/main.scss
@@ -25,9 +25,9 @@
     color: #2D2D2D;
     font-family: 'Noto Serif', 'Times New Roman', Georgia, serif;
     font-style: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 24px;
-    font-weight: 400;
     box-sizing: border-box;
     padding: 0 40px 0 40px;
   }
@@ -42,11 +42,19 @@
   h1 {
     font-size: 64px;
     line-height: 72px;
+    margin-bottom: 24px 0;
+  }
+
+  h2 {
+    font-size: 40px;
+    line-height: 48px;
+    margin: 16px 0;
   }
 
   h3 {
     font-size: 24px;
     line-height: 32px;
+    margin-bottom: 12px 0;
   }
 
   a {
@@ -69,13 +77,32 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 40px 12px 40px 12px;
+    padding: 40px 0;
+    margin-bottom: 40px;
   }
 
   .site-title {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 34px;
+    font-weight: 900;
+    line-height: 24px;
+  }
+
+  .nav-links {
+    display: flex;
+    gap: 40px;
+  }
+
+  .page-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    opacity: 0.4;
+    transition: opacity 0.2s ease;
+  }
+  
+  .page-link:hover, 
+  .page-link.active {
+    opacity: 1;
   }
 
   .flex {
@@ -120,10 +147,10 @@
     flex: 1 1 auto;
     border-radius: 4px;
     box-shadow: 0px 0px 0px 1px #2D2D2D20 inset;
-    background-image: url("/assets/images/2017/08/DSCF0410-1.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: #f5f5f5; /* Fallback color if no image is available */
   }
 
   .post-info {
@@ -194,39 +221,62 @@
 
   .post-content p {
     max-width: 800px;
-    margin-bottom: 24px;
-  }
-  
-  .post-content h1, .post-content h2, .post-content h3, 
-  .post-content h4, .post-content h5, .post-content h6 {
-    margin-top: 40px;
-    margin-bottom: 16px;
-  }
-  
-  .post-content ul, .post-content ol {
-    margin-bottom: 24px;
-    padding-left: 24px;
-  }
-  
-  .post-content li {
-    margin-bottom: 8px;
+    margin-bottom: 1em;
   }
 
   .post-content ul:has(li img) {
     list-style: none;
-    margin: 40px 0;
-    padding-left: 0;
   }
 
-  .post-content ul:has(li img) > li {
-    margin-bottom: 24px;
-  }
-
-  .post-content ul:has(li img) li img {
+  .post-content img {
     max-width: 100%;
     max-height: 90vh;
-    height: auto;
-    vertical-align: middle;
     border-radius: 4px;
-    margin: 0;
+  }
+  
+/* Footer */
+
+  .site-footer {
+    padding: 40px 0;
+    margin-top: 80px;
+  }
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .footer-left {
+    display: flex;
+    align-items: center;
+  }
+  
+  .footer-logo {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 500;
+    margin-right: 80px;
+  }
+  
+  .footer-links {
+    display: flex;
+    gap: 40px;
+  }
+  
+  .footer-link {
+    font-size: 16px;
+    line-height: 20px;
+    opacity: 0.4;
+    transition: opacity 0.2s ease;
+  }
+  
+  .footer-link:hover {
+    opacity: 1;
+  }
+  
+  .copyright {
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 16px;
+    line-height: 20px;
   }
