--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
       <nav class="flex site-nav">
         <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
         <div class="nav-links">
-          <a class="text-s page-link" href="https://facebook.com/shouldgo">фейсбук</a>
+          <a class="text-s page-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
           <a class="text-s page-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
