--- a/assets/main.scss
+++ b/assets/main.scss
@@ -89,7 +89,7 @@ a {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  row-gap: 80px;
+  row-gap: 60px;
   column-gap: 40px;
 }
 
@@ -135,6 +135,10 @@ a {
   padding: 0 12px;
   flex-direction: column;
   gap: 12px;
+}
+
+.post-title {
+  margin: 0;
 }
 
 .post-title a::after {
