--- a/assets/main.scss
+++ b/assets/main.scss
@@ -258,3 +258,11 @@ a {
   font-size: 16px;
   line-height: 20px;
 }
+
+@media (min-width: 768px) {
+  /* Tablet and up */
+}
+
+@media (min-width: 1024px) {
+  /* Desktop and up */
+}
