--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,24 @@
 <footer class="site-footer">
   <div class="wrapper">
-    <div class="footer-content">
-      <div class="footer-left">
-        <a class="footer-logo" href="{{ "/" | relative_url }}">shouldgo.me</a>
-        <div class="footer-links">
-          <a class="text-s footer-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
-          <a class="text-s footer-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
+      <nav class="flex site-nav">
+         <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
+        <div class="flex nav-links">
+          <a class="page-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
+          <a class="page-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
            {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title and my_page.path != 'CLAUDE.md' -%}
               {% if my_page.path == 'about.markdown' %}
-                <a class="text-s page-link" href="{{ my_page.url | relative_url }}">эбаут</a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">эбаут</a>
               {% else %}
-                <a class="text-s page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
               {% endif %}
             {%- endif -%}
           {%- endfor -%}
         </div>
+      <div class="copyright">
+        <span class="text-xs">Dima Afonin © 2009 – {{ "now" | date: "%Y" }}</span>
       </div>
-      <div class="footer-right">
-        <span class="copyright">Dima Afonin © 2009 - 2025</span>
-      </div>
-    </div>
+    </nav>
   </div>
 </footer>
