--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,16 +5,20 @@
     {%- if page_paths -%}
       <nav class="flex site-nav">
         <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
-        <div class="nav-links">
-          <a class="text-s page-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
-          <a class="text-s page-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
+        <input type="checkbox" id="burger-toggle" class="burger-toggle" aria-label="Открыть меню" />
+        <label for="burger-toggle" class="flex burger" aria-hidden="true">
+          <span></span><span></span><span></span>
+        </label>
+        <div class="flex nav-links">
+          <a class="page-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
+          <a class="page-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title and my_page.path != 'CLAUDE.md' -%}
               {% if my_page.path == 'about.markdown' %}
-                <a class="text-s page-link" href="{{ my_page.url | relative_url }}">эбаут</a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">эбаут</a>
               {% else %}
-                <a class="text-s page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
               {% endif %}
             {%- endif -%}
           {%- endfor -%}
