--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-/* Base Styles */
+/* BASE STYLES */
 * {
   margin: 0;
   padding: 0;
@@ -23,25 +23,18 @@ body {
   padding: 0 1em;
 }
 
-/* Typography */
+/* TYPOGRAPHY */
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   line-height: 1.2;
-  margin: 1em 0 0.6em 0;
+  margin: 0.8em 0 0.4em 0;
 }
-
-ul, ol { margin: 2em 0; }
 
 h1 { font-size: 2em }
 h2 { font-size: 1.5em }
 h3 { font-size: 1.25em }
-h4, p { font-size: 1.125em }
-
-p, li { margin-bottom: 0.8em; }
-
-ul:has(li img) {
-    list-style: none;
-}
+h4 { font-size: 1em }
+p { margin-bottom: 0.5em; }
 
 a {
   color: #337799;
@@ -49,10 +42,17 @@ a {
   &:hover { text-decoration: underline; }
 }
 
+.nav-links,
+.site-title,
+.post-title {
+  a {
+    color: inherit;
+  }
+}
+
 /* Layout */
 .wrapper {
   margin: 0 auto;
-  padding: 2em 0;
   max-width: 960px;
 }
 
@@ -61,83 +61,66 @@ a {
   flex-direction: column;
 }
 
-img {
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-  object-fit: cover;
+/* Navigation */
+
+.site-header {
+  margin-bottom: 1.5em;
+
+  .nav-links { display: none;}
 }
 
-/* NAVIGATION */
-
-.site-header .nav-links { display: none;}
-
 .site-nav {
-  position: relative;
+  padding: 2.5em 0;
   gap: 3em;
 }
 
 .site-title {
-  color: inherit;
+  color: #1A1A1A;
   font-size: 1.25em;
   font-weight: 900;
 }
 
 .nav-links {
-  gap: 2em;
+  color: #c6c5c3;
+  gap: 2em
+}
 
-  a {
-    color: #c6c5c3;
-    &:hover, &.active { color: inherit; }
+.page-link {
+  &:hover, &.active {
+    color:#1A1A1A;
   }
 }
 
-/* BURGER MENU */
-
-.burger-toggle {
-  display: none;
+.site-footer {
+  margin-top: 1.5em;
 }
 
-.burger {
-  position: absolute;
-  right: 0;
-  justify-content: center;
-  gap: 0.3em;
-  width: 2em;
-  height: 2em;
-  cursor: pointer;
-  z-index: 101;
-
-  span {
-    display: block;
-    height: 0.1em;
-    width: 100%;
-    background: #1A1A1A;
-  }
-}
-
-.burger-toggle:checked + .burger + .nav-links {
-  display: flex;
-  flex-direction: column;
-}
-
-/* POST CARDS */
+/* Post List */
 .post-list {
   gap: 4em;
-  margin: 0;
-  h2, p, li, ol { margin: 0; }
 }
 
+/* Post Cards */
 .post-card {
   position: relative;
   align-items: stretch;
   gap: 1em;
 }
 
+.post-image-link img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
+}
+
 .post-info {
   gap: 0.75em;
-  a { color: inherit; }
-  p { font-size: 1em;}
+
+  h2,
+  p {
+    margin: 0;
+  }
 }
 
 .post-title a::after {
@@ -151,86 +134,12 @@ img {
   color: #c6c5c3;
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  line-clamp: 2;
   -webkit-box-orient: vertical;
-  box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-/* POST CONTENT */
-
-
-
-/* Image Caption */
-.image-caption {
-  text-align: center;
-  font-size: 16px;
-  color: #c6c5c3;
-  margin-top: -24px;
-  margin-bottom: 32px;
-  font-style: italic;
-} 
-
-
-
-@media (min-width: 768px) {
-  body {
-    font-size: 20px;
-  }
-
-  h1 { font-size: 3em }
-  h2 { font-size: 2em }
-  h3 { font-size: 1.5em }
-  h4 { font-size: 1em }
-
-  .site-nav {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 0;
-    margin-bottom: 40px;
-  }
-
-  .site-header .burger {
-    display: none;
-  }
-  .site-header .burger-toggle {
-    display: none;
-  }
-  .site-header .nav-links {
-    display: flex !important;
-    position: static;
-    flex-direction: row;
-    background: none;
-    box-shadow: none;
-    border-radius: 0;
-    padding: 0;
-  }
-
-    .post-card:first-child {
-    flex-direction: row;
-    gap: 32px;
-    width: 100%;
-    max-width: 100%;
-    max-height: 400px;
-    
-    .post-info {
-      gap: 20px;
-      padding: 12px 0;
-      max-width: 328px;
-      justify-content: center;
-    }
-
-    .post-title { font-size: 1.6em; }
-    
-    .post-description {
-      -webkit-line-clamp: 8;
-      line-clamp: 8;
-    }
-  }
-
-  /* Article Content */
+/* Article Content */
 .post-header {
   margin-bottom: 48px;
   max-width: 720px;
@@ -259,6 +168,10 @@ img {
     max-width: 960px;
   }
   
+  ul:has(li img) {
+    list-style: none;
+  }
+  
   img {
     max-width: 100%;
     max-height: 800px;
@@ -268,19 +181,62 @@ img {
     border-radius: 4px;
     object-fit: contain;
   }
-
-  .post-content img {
-    width: 100vw;
-    max-width: 100vw;
-    min-width: 100vw;
-    height: auto;
-    display: block;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    border-radius: 0;
-  }
 }
 
+/* Image Caption */
+.image-caption {
+  text-align: center;
+  font-size: 16px;
+  color: #c6c5c3;
+  margin-top: -24px;
+  margin-bottom: 32px;
+  font-style: italic;
+} 
+
+@media (min-width: 768px) {
+  body {
+    font-size: 20px;
+  }
+
+  h1 { font-size: 3em }
+  h2 { font-size: 2em }
+  h3 { font-size: 1.5em }
+  h4 { font-size: 1em }
+  p { margin-bottom: 0.5em; }
+
+  .site-nav {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 0;
+    margin-bottom: 40px;
+  }
+
+  .nav-links {
+    display: flex;
+    gap: 40px;
+  }
+
+    .post-card:first-child {
+    flex-direction: row;
+    gap: 32px;
+    width: 100%;
+    max-width: 100%;
+    max-height: 400px;
+    
+    .post-info {
+      gap: 20px;
+      padding: 12px 0;
+      max-width: 328px;
+      justify-content: center;
+    }
+
+    .post-title { font-size: 1.6em; }
+    
+    .post-description {
+      -webkit-line-clamp: 8;
+    }
+  }
 }
 
 @media (min-width: 1024px) {
