--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,7 @@ body {
   color: #1A1A1A;
   font-family: 'Noto Serif', 'Times New Roman', Georgia, serif;
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.65;
   font-weight: 400;
   padding: 0 1em;
 }
@@ -27,14 +27,25 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   line-height: 1.2;
-  margin: 0.8em 0 0.4em 0;
+  margin: 1em 0 0.6em 0;
 }
+
+ul, ol { margin: 2em 0; }
 
 h1 { font-size: 2em }
 h2 { font-size: 1.5em }
 h3 { font-size: 1.25em }
-h4 { font-size: 1em }
-p { margin-bottom: 0.5em; }
+h4 { font-size: 1.125em }
+
+p, li { margin-bottom: 0.8em; }
+
+ul {
+   list-style-position: inside;
+}
+
+ul:has(li img) {
+    list-style: none;
+}
 
 a {
   color: #337799;
@@ -42,17 +53,10 @@ a {
   &:hover { text-decoration: underline; }
 }
 
-.nav-links,
-.site-title,
-.post-title {
-  a {
-    color: inherit;
-  }
-}
-
-/* Layout */
+/* LAYOUT */
 .wrapper {
   margin: 0 auto;
+  padding: 2em 0;
   max-width: 960px;
 }
 
@@ -61,66 +65,83 @@ a {
   flex-direction: column;
 }
 
-/* Navigation */
-
-.site-header {
-  margin-bottom: 1.5em;
-
-  .nav-links { display: none;}
-}
-
-.site-nav {
-  padding: 2.5em 0;
-  gap: 3em;
-}
-
-.site-title {
-  color: #1A1A1A;
-  font-size: 1.25em;
-  font-weight: 900;
-}
-
-.nav-links {
-  color: #c6c5c3;
-  gap: 2em
-}
-
-.page-link {
-  &:hover, &.active {
-    color:#1A1A1A;
-  }
-}
-
-.site-footer {
-  margin-top: 1.5em;
-}
-
-/* Post List */
-.post-list {
-  gap: 4em;
-}
-
-/* Post Cards */
-.post-card {
-  position: relative;
-  align-items: stretch;
-  gap: 1em;
-}
-
-.post-image-link img {
+img {
   width: 100%;
   height: auto;
   max-width: 100%;
   object-fit: cover;
 }
 
+/* NAVIGATION */
+
+.site-header .nav-links { display: none;}
+
+.site-nav {
+  position: relative;
+  gap: 3em;
+}
+
+.site-title {
+  color: inherit;
+  font-size: 1.25em;
+  font-weight: 900;
+}
+
+.nav-links {
+  gap: 2em;
+
+  a {
+    color: #c6c5c3;
+    &:hover, &.active { color: inherit; }
+  }
+}
+
+/* BURGER MENU */
+
+.burger-toggle {
+  display: none;
+}
+
+.burger {
+  position: absolute;
+  right: 0;
+  justify-content: center;
+  gap: 0.3em;
+  width: 2em;
+  height: 2em;
+  cursor: pointer;
+  z-index: 101;
+
+  span {
+    display: block;
+    height: 0.1em;
+    width: 100%;
+    background: #1A1A1A;
+  }
+}
+
+.burger-toggle:checked + .burger + .nav-links {
+  display: flex;
+  flex-direction: column;
+}
+
+/* POST CARDS */
+.post-list {
+  gap: 4em;
+  margin: 0;
+  h2, p, li, ol { margin: 0; }
+}
+
+.post-card {
+  position: relative;
+  align-items: stretch;
+  gap: 1em;
+}
+
 .post-info {
   gap: 0.75em;
-
-  h2,
-  p {
-    margin: 0;
-  }
+  a { color: inherit; }
+  p { font-size: 1em;}
 }
 
 .post-title a::after {
@@ -134,43 +155,98 @@ a {
   color: #c6c5c3;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
+  box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-/* Article Content */
+/* POST CONTENT */
+
 .post-header {
-  margin-bottom: 48px;
-  max-width: 720px;
-  margin-left: auto;
-  margin-right: auto;
+  h1 { margin-top: 0.2em; }
+  .post-meta { color:#c6c5c3; }
 }
 
 .post-content {
-  font-size: 20px;
-  line-height: 32px;
+  font-size: 1.125em;
+  img {margin: 1em 0;}
+}
+
+/* MEDIA QUERIES */
+
+@media (min-width: 768px) {
+
+  /*TYPOGRAPHY */
+
+  h1 { font-size: 3em }
+  h2 { font-size: 2em }
+  h3 { font-size: 1.5em }
+  h4 { font-size: 1.25em }
+
+  /*NAVIGATION */
   
-  /* Base content width */
-  > * {
+  .site-nav {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .burger, .burger-toggle { display: none; }
+  
+  .nav-links {
+    display: flex !important;
+    flex-direction: row;
+  }
+
+  /* POSTS */
+
+  .post-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 3.75em;
+    column-gap: 2.5em;
+  }
+
+  .post-card {
+    flex: 1 1 calc(50% - 1.25em);
+    max-width: calc(50% - 1.25em);
+    height: 460px;
+    box-sizing: border-box;
+
+    &:first-child {
+      flex-direction: row;
+      gap: 1.5em;
+      min-width: 100%;
+
+      .post-info {
+        gap: 1.5em;
+        min-width: 30%;
+        max-width: 328px;
+        justify-content: center;
+      }
+    
+      .post-description {
+        -webkit-line-clamp: 8;
+        line-clamp: 8;
+      }
+    }
+
+    &:not(:first-child) { h2 { font-size: 1.5em; } }
+  }
+
+  /* POST CONTENT */
+  .post-header,
+  .post-content > * {
     max-width: 720px;
     margin-left: auto;
     margin-right: auto;
   }
-  
-  /* Allow images and their containers to be wider */
-  p:has(img),
-  div:has(img),
-  figure,
-  img,
-  .highlight,
-  ul:has(li img) {
-    max-width: 960px;
-  }
-  
-  ul:has(li img) {
-    list-style: none;
-  }
+
+  .post-content {
+    p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) { max-width: 960px;   }
   
   img {
     max-width: 100%;
@@ -181,62 +257,19 @@ a {
     border-radius: 4px;
     object-fit: contain;
   }
+
+  .post-content img {
+    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
+    height: auto;
+    display: block;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    border-radius: 0;
+  }
 }
 
-/* Image Caption */
-.image-caption {
-  text-align: center;
-  font-size: 16px;
-  color: #c6c5c3;
-  margin-top: -24px;
-  margin-bottom: 32px;
-  font-style: italic;
-} 
-
-@media (min-width: 768px) {
-  body {
-    font-size: 20px;
-  }
-
-  h1 { font-size: 3em }
-  h2 { font-size: 2em }
-  h3 { font-size: 1.5em }
-  h4 { font-size: 1em }
-  p { margin-bottom: 0.5em; }
-
-  .site-nav {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding: 40px 0;
-    margin-bottom: 40px;
-  }
-
-  .nav-links {
-    display: flex;
-    gap: 40px;
-  }
-
-    .post-card:first-child {
-    flex-direction: row;
-    gap: 32px;
-    width: 100%;
-    max-width: 100%;
-    max-height: 400px;
-    
-    .post-info {
-      gap: 20px;
-      padding: 12px 0;
-      max-width: 328px;
-      justify-content: center;
-    }
-
-    .post-title { font-size: 1.6em; }
-    
-    .post-description {
-      -webkit-line-clamp: 8;
-    }
-  }
 }
 
 @media (min-width: 1024px) {
