--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,7 +29,7 @@ layout: default
             <a href="{{ post.url | relative_url }}" class="post-link">{{ post.title | escape }}</a>
           </h2>
           <div class="post-description">
-            <p class="text-s">{{ post.excerpt | strip_html | truncate: 300 }}</p>
+            <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
           </div> 
           <span class="text-xs post-meta">{{ post.date | date: date_format }}</span>
         </div>
