--- a/assets/main.scss
+++ b/assets/main.scss
@@ -200,7 +200,6 @@ img {
   /* POSTS */
 
   .post-list {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     row-gap: 3.75em;
@@ -215,7 +214,7 @@ img {
 
     &:first-child {
       flex-direction: row;
-      gap: 1.5em;
+      gap: 2em;
       min-width: 100%;
       height: 400px;
 
@@ -235,6 +234,13 @@ img {
     &:not(:first-child) { h2 { font-size: 1.5em; } }
   }
 
+  .post-image {
+    flex: 1;
+    min-height: 0;
+
+    img { height: 100%; }
+    }
+
   /* POST CONTENT */
   .post-header,
   .post-content > * {
@@ -244,32 +250,16 @@ img {
   }
 
   .post-content {
-    p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) { max-width: 960px;   }
+    p:has(img), div:has(img), figure, img, .highlight, ul:has(li img) {
+      max-width: 960px;
+    }
   
-  img {
-    max-width: 100%;
-    max-height: 800px;
-    height: auto;
-    margin: 36px auto;
-    display: block;
-    border-radius: 4px;
-    object-fit: contain;
+    img {
+      max-height: 800px;
+      margin: 3em auto;
+      display: block;
+      object-fit: contain;
+    }
   }
 
-  .post-content img {
-    width: 100vw;
-    max-width: 100vw;
-    min-width: 100vw;
-    height: auto;
-    display: block;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    border-radius: 0;
-  }
-}
-
-}
-
-@media (min-width: 1024px) {
-  /* Desktop and up */
 }
