--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,6 @@ layout: default
       {%- for post in site.posts -%}
       <li class="flex post-card">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <!--<div class="post-image" {% if post.image %}style="background-image: url('{{ post.image | relative_url }}');"{% endif %}></div>-->
         <div class="post-image">
           <a href="{{ post.url | relative_url }}" class="post-image-link">
           {% if post.image %}
@@ -31,7 +30,18 @@ layout: default
           <div class="post-description">
             <p>{{ post.excerpt | strip_html | truncate: 300 }}</p>
           </div> 
-          <span class="text-xs post-meta">{{ post.date | date: date_format }}</span>
+          <span class="post-meta">
+            <time class="dt-published" datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">
+              {{ post.date | date: date_format }}
+            </time>
+            {%- if post.tags and post.tags.size > 0 -%}
+              • <span class="post-tags">
+                {%- for tag in post.tags -%}
+                  <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a> {{ ' ' }}
+                {%- endfor -%}
+              </span>
+            {%- endif -%}
+          </span>
         </div>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
