--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,15 +4,23 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-     <span class="post-meta">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <span class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</span>
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+      {%- endif -%}
+      {%- if page.tags and page.tags.size > 0 -%}
+        • <span class="post-tags">
+          {%- for tag in page.tags -%}
+            <a href="{{ '/tags/' | append: tag | relative_url }}" class="post-tag">#{{ tag }}</a> {{ ' ' }}
+          {%- endfor -%}
+        </span>
+      {%- endif -%}
+    </span>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
