--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
       <nav class="flex site-nav">
          <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
-        <div class="flex nav-links">
+        <div class="flex serif nav-links">
           <a class="page-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
           <a class="page-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
            {%- for path in page_paths -%}
