--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         <label for="burger-toggle" class="flex burger" aria-hidden="true">
           <span></span><span></span><span></span>
         </label>
-        <div class="flex nav-links">
+        <div class="flex serif nav-links">
           <a class="page-link" href="https://www.facebook.com/dima.afonin">фейсбук</a>
           <a class="page-link" href="https://linkedin.com/in/shouldgo">линкедин</a>
           {%- for path in page_paths -%}
