--- a/assets/main.scss
+++ b/assets/main.scss
@@ -24,26 +24,33 @@ body {
 }
 
 /* TYPOGRAPHY */
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 600;
-  line-height: 1.2;
-  margin: 1em 0 0.6em 0;
+$heading-styles: (
+  h1: (font-size: 2em, desktop-font-size: 3em, line-height: 1.2, margin-top: 2em, margin-bottom: 1em),
+  h2: (font-size: 1.5em, desktop-font-size: 2em, line-height: 1.25, margin-top: 1.5em, margin-bottom: 0.75em),
+  h3: (font-size: 1.25em, desktop-font-size: 1.5em, line-height: 1.3, margin-top: 1.25em, margin-bottom: 0.5em),
+  h4: (font-size: 1.125em, desktop-font-size: 1.25em, line-height: 1.4, margin-top: 1em, margin-bottom: 0.5em)
+);
+
+@each $heading, $props in $heading-styles {
+  #{$heading} {
+    font-size: map-get($props, font-size);
+    line-height: map-get($props, line-height);
+    margin-top: map-get($props, margin-top);
+    margin-bottom: map-get($props, margin-bottom);
+  }
 }
 
-ul, ol { margin: 2em 0; }
+.serif { font-family: 'Tahoma', 'Arial', sans-serif; }
 
-h1 { font-size: 2em }
-h2 { font-size: 1.5em }
-h3 { font-size: 1.25em }
-h4 { font-size: 1.125em }
+// Optimized text and list styles
+p, ul, ol { margin: 0 0 1em 0; }
 
-p, li { margin-bottom: 0.8em; }
-
-ul {
-   list-style-position: inside;
-
-   &:has(li img) { list-style: none; }
+ul, ol {
+  list-style-position: inside;
+  &:has(li img) { list-style: none; }
 }
+
+li { margin-bottom: 0.25em; }
 
 a {
   color: #337799;
@@ -54,7 +61,6 @@ a {
 /* LAYOUT */
 .wrapper {
   margin: 0 auto;
-  padding: 2em 0;
   max-width: 960px;
 }
 
@@ -73,6 +79,10 @@ img {
 /* NAVIGATION */
 
 .site-header .nav-links { display: none;}
+
+.site-nav {
+  padding: 2em 0;
+} 
 
 .site-nav {
   position: relative;
@@ -122,10 +132,37 @@ img {
   display: flex;
 }
 
+/* PAGINATION */
+
+.pagination {
+  flex-direction: row;
+  justify-content: center;
+  padding: 2em 0;
+
+  > * {
+    display: block;
+    padding: 0.5em 1em;
+    text-align: center;
+    color: #c6c5c3;
+
+      &:first-child { margin-right: auto;  padding: 0.5em 0;}
+      &:last-child { margin-left: auto; padding: 0.5em 0; }
+  }
+}
+
+.pagination-current {
+    color: #1A1A1A;
+  }
+
+.pagination-next, .pagination-back {
+  padding: 0.5em 0;
+}
+
 /* POST CARDS */
 .post-list {
   gap: 4em;
   margin: 0;
+  padding: 2em 0;
   h2, p, li, ol { margin: 0; }
 }
 
@@ -160,7 +197,6 @@ img {
 }
 
 .post-meta {
-  font-family: 'Tahoma', 'Arial', sans-serif;
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
@@ -194,10 +230,9 @@ img {
 
   /*TYPOGRAPHY */
 
-  h1 { font-size: 3em }
-  h2 { font-size: 2em }
-  h3 { font-size: 1.5em }
-  h4 { font-size: 1.25em }
+  @each $heading, $props in $heading-styles {
+    #{$heading} { font-size: map-get($props, desktop-font-size); }
+  }
 
   /*NAVIGATION */
   
