--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,9 +4,10 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
+    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <span class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+        {%- assign date_format = site.minima.date_format | default: "%d.%m.%Y" -%}
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
@@ -20,7 +21,6 @@ layout: default
         </span>
       {%- endif -%}
     </span>
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
