--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,10 @@
             {%- if my_page.title and my_page.path != 'CLAUDE.md' -%}
               {% if my_page.path == 'about.markdown' %}
                 <a class="page-link" href="{{ my_page.url | relative_url }}">эбаут</a>
-              {% else %}
+                {%- comment -%}
+                {% else %}
                 <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                {%- endcomment -%}
               {% endif %}
             {%- endif -%}
           {%- endfor -%}
