Add travel guides for Cyprus and personal reflections as a digital nomad
- Created two new posts: "Cyprus: Winter Getaway Guide" and "Cyprus: The Other Side of The Island" detailing travel experiences and insights.
- Added a personal reflection post titled "My Year as a Digital Nomad" summarizing travels and experiences throughout the year.
- Updated index pages for English and Russian versions to enable pagination.
- Implemented language switcher for easy navigation between English and Russian content.
- Added JavaScript for automatic language redirection based on user browser settings.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,11 @@
   <div class="wrapper">
     <nav class="flex site-nav">
       <a class="site-title" rel="author" href="{{ "/" | relative_url }}" title="{{ site.title | escape }}">shouldgo.me</a>
-      {% include navlinks.html %}
+      <div class="flex serif nav-links">
+          <a class="page-link" href="http://instagram.com/shouldgo/">{% t nav.ig %}</a>
+          <a class="page-link" href="https://www.facebook.com/dima.afonin/">{% t nav.fb %}</a>
+          <a class="page-link" href="https://linkedin.com/in/shouldgo/">{% t nav.in %}</a>
+      </div>
       <div class="copyright">{% t global.author %} © 2009 – {{ "now" | date: "%Y" }}</div>
     </nav>
   </div>
