--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
         <input type="checkbox" id="burger-toggle" class="burger-toggle" />
         <label for="burger-toggle" class="flex burger" aria-hidden="true"><span></span><span></span><span></span></label>
         {% include navlinks.html %}
+        {% include lang-switcher.html %}
       </nav>
   </div>
 </header>
