--- a/_includes/navlinks.html
+++ b/_includes/navlinks.html
@@ -1,6 +1,12 @@
 <div class="flex serif nav-links">
-    <a class="page-link" href="http://instagram.com/shouldgo/">{% t nav.ig %}</a>
-    <a class="page-link" href="https://www.facebook.com/dima.afonin/">{% t nav.fb %}</a>
-    <a class="page-link" href="https://linkedin.com/in/shouldgo/">{% t nav.in %}</a>
-    <a class="page-link" href="{{ "/dima-afonin/" | relative_url }}">{% t nav.about %}</a>
+    {% if page.url == '/' or page.url == '/ru/' or page.url == '/index.html' or page.url == '/ru/index.html' %}
+      <span>{% t nav.blog %}</span>
+    {% else %}
+      <a class="page-link" href="{{ "/" | relative_url }}">{% t nav.blog %}</a>
+    {% endif %}
+    {% if page.url contains 'dima-afonin' %}
+      <span>{% t nav.about %}</span>
+    {% else %}
+      <a class="page-link" href="{{ "/dima-afonin/" | relative_url }}">{% t nav.about %}</a>
+    {% endif %}
 </div>
